# NaaVRE-flavors

./: LICENSE.txt  README.md  build-local.sh
.github/workflows/: add-issue-to-projects-overview.yaml  build-image.yaml  make-flavor.yaml  make.yaml  push-image.yaml  test-naavre-cell.yaml
docker/: cell-test.Dockerfile  naavre-cell-build.Dockerfile  naavre-cell.Dockerfile  naavre-jupyter.Dockerfile
flavors/biodt-hackathon25/: environment.yaml  flavor_config.yaml
flavors/biotope/: README.md  environment.yaml  flavor_config.yaml  naavre-cell-build.Dockerfile  naavre-cell-runtime.Dockerfile  naavre-jupyter.Dockerfile
flavors/biotope/OTB/: CMakeLists.txt  LookUp.cxx  LookUpAggregate.cxx  TabulateFilter.cxx  ZonalFilter.cxx  engeLookupFilter.h  engeLookupFilter.txx  fragStat.cxx  lwLocalZonal.cxx  lwLocalZonal.h  lwLocalZonal.txx  lwScalar.h  lwString.h  lwTime.h  otbTabulatePersistentFilter.h  otbUniqueValuePersistentFilter.h  otbZonalPersistentFilterMap.h
flavors/laserfarm/: environment.yaml  flavor_config.yaml
flavors/lter-life-veluwe/: environment.yaml  flavor_config.yaml
flavors/lter-life-wadden/: environment.yaml  flavor_config.yaml  install_packages.R  naavre-cell-build.Dockerfile  naavre-jupyter.Dockerfile
flavors/lter-life-wadden-py/: environment.yaml  flavor_config.yaml  naavre-cell-build.Dockerfile  naavre-jupyter.Dockerfile
flavors/pclake/: environment.yaml  flavor_config.yaml
flavors/phytoplankton/: environment.yaml  flavor_config.yaml
flavors/python/: environment.yaml  flavor_config.yaml
flavors/quadfavl/: README.md  environment.yaml  flavor_config.yaml  naavre-cell-build.Dockerfile  naavre-cell-runtime.Dockerfile  naavre-jupyter.Dockerfile
flavors/r/: environment.yaml  flavor_config.yaml
flavors/ravl/: environment.yaml  flavor_config.yaml  naavre-cell-runtime.Dockerfile  naavre-jupyter.Dockerfile
flavors/veluwe-forest-model/: README.md  (+4 more)
(+30 files in other folders)
